[package]
name = "heline-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hli"
path = "src/main.rs"

[dependencies]
select = "0.5.0"
walkdir = "2.3.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.78"
hl = { git = "https://github.com/ahmadrosid/hl", branch = "main" }
