[package]
name = "heline-indexer"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "hli"
path = "src/main.rs"

[dependencies]
select = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.78"
hl_core = "0.1.3"
loading = "0.1.2"
ignore = "0.4.18"
